--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ edition = "2018"
 petgraph = "0.5.1"
 
 [dev-dependencies]
-criterion = "0.3"
-rand = "0.8.3"
+criterion = { version = "0.3", features = ["html_reports"] }
+rand = { version = "0.8.3", features = ["small_rng"] }
 
 [[bench]]
 name = "my_benchmark"
