--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 petgraph = "0.5.1"
+paste = "1.0.5"
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["html_reports"] }
